added routes equipment/filters and equipment/id
