# docs/swagger.json
@@ -8,8 +8,8 @@
 		"schemas": {
 			"UUID": {
 				"type": "string",
-				"description": "Stringified UUIDv4.\nSee [RFC 4112](https://tools.ietf.org/html/rfc4122)",
-				"pattern": "[0-9A-Fa-f]{8}[0-9A-Fa-f]{4}4[0-9A-Fa-f]{3}[89ABab][0-9A-Fa-f]{3}[0-9A-Fa-f]{12}"
+				"description": "Stringified UUIDv1.\nSee [RFC 4112](https://tools.ietf.org/html/rfc4122)",
+				"pattern": "^[0-9A-Fa-f]{32}$"
 			},
 			"Address": {
 				"properties": {
@@ -135,10 +135,14 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"Code": {
+				"type": "string",
+				"pattern": "^[a-z_]{3,10}$"
+			},
 			"Owner": {
 				"properties": {
 					"code": {
-						"type": "string"
+						"$ref": "#/components/schemas/Code"
 					},
 					"label": {
 						"type": "string"
@@ -154,7 +158,7 @@
 			"SoilType": {
 				"properties": {
 					"code": {
-						"type": "string"
+						"$ref": "#/components/schemas/Code"
 					},
 					"label": {
 						"type": "string"
@@ -170,7 +174,7 @@
 			"EquipmentNature": {
 				"properties": {
 					"code": {
-						"type": "string"
+						"$ref": "#/components/schemas/Code"
 					},
 					"label": {
 						"type": "string"
@@ -186,7 +190,7 @@
 			"EquipmentType": {
 				"properties": {
 					"code": {
-						"type": "string"
+						"$ref": "#/components/schemas/Code"
 					},
 					"label": {
 						"type": "string"
@@ -202,7 +206,7 @@
 			"EquipmentLevel": {
 				"properties": {
 					"code": {
-						"type": "string"
+						"$ref": "#/components/schemas/Code"
 					},
 					"label": {
 						"type": "string"
@@ -218,7 +222,7 @@
 			"Category": {
 				"properties": {
 					"code": {
-						"type": "string"
+						"$ref": "#/components/schemas/Code"
 					},
 					"name": {
 						"type": "string"
@@ -234,7 +238,7 @@
 			"Sport": {
 				"properties": {
 					"code": {
-						"type": "string"
+						"$ref": "#/components/schemas/Code"
 					},
 					"name": {
 						"type": "string"
@@ -543,7 +547,7 @@
 			"IOwner": {
 				"properties": {
 					"code": {
-						"type": "string"
+						"$ref": "#/components/schemas/Code"
 					},
 					"label": {
 						"type": "string"
@@ -555,7 +559,7 @@
 			"ISoilType": {
 				"properties": {
 					"code": {
-						"type": "string"
+						"$ref": "#/components/schemas/Code"
 					},
 					"label": {
 						"type": "string"
@@ -567,7 +571,7 @@
 			"IEquipmentNature": {
 				"properties": {
 					"code": {
-						"type": "string"
+						"$ref": "#/components/schemas/Code"
 					},
 					"label": {
 						"type": "string"
@@ -579,7 +583,7 @@
 			"IEquipmentType": {
 				"properties": {
 					"code": {
-						"type": "string"
+						"$ref": "#/components/schemas/Code"
 					},
 					"label": {
 						"type": "string"
@@ -591,7 +595,7 @@
 			"IEquipmentLevel": {
 				"properties": {
 					"code": {
-						"type": "string"
+						"$ref": "#/components/schemas/Code"
 					},
 					"label": {
 						"type": "string"
@@ -603,7 +607,7 @@
 			"ICategory": {
 				"properties": {
 					"code": {
-						"type": "string"
+						"$ref": "#/components/schemas/Code"
 					},
 					"name": {
 						"type": "string"
@@ -615,7 +619,7 @@
 			"ISport": {
 				"properties": {
 					"code": {
-						"type": "string"
+						"$ref": "#/components/schemas/Code"
 					},
 					"name": {
 						"type": "string"
@@ -764,6 +768,56 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"Filters": {
+				"properties": {
+					"soil_types": {
+						"items": {
+							"$ref": "#/components/schemas/SoilType"
+						},
+						"type": "array"
+					},
+					"owners": {
+						"items": {
+							"$ref": "#/components/schemas/Owner"
+						},
+						"type": "array"
+					},
+					"equipment_types": {
+						"items": {
+							"$ref": "#/components/schemas/EquipmentType"
+						},
+						"type": "array"
+					},
+					"equipment_natures": {
+						"items": {
+							"$ref": "#/components/schemas/EquipmentNature"
+						},
+						"type": "array"
+					},
+					"equipment_levels": {
+						"items": {
+							"$ref": "#/components/schemas/EquipmentLevel"
+						},
+						"type": "array"
+					},
+					"sports": {
+						"items": {
+							"$ref": "#/components/schemas/Sport"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"soil_types",
+					"owners",
+					"equipment_types",
+					"equipment_natures",
+					"equipment_levels",
+					"sports"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"ErrorResponse": {
 				"properties": {
 					"name": {
@@ -881,6 +935,63 @@
 				}
 			}
 		},
+		"/equipment/filters": {
+			"get": {
+				"operationId": "GetFilters",
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Filters"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/equipment/{id}": {
+			"get": {
+				"operationId": "GetEquipmentById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Equipment"
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ErrorResponse"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"$ref": "#/components/schemas/UUID"
+						}
+					}
+				]
+			}
+		},
 		"/sport": {
 			"get": {
 				"operationId": "GetSports",
@@ -906,7 +1017,7 @@
 						"name": "category",
 						"required": false,
 						"schema": {
-							"type": "string"
+							"$ref": "#/components/schemas/Code"
 						}
 					}
 				]
@@ -944,7 +1055,7 @@
 						"name": "code",
 						"required": true,
 						"schema": {
-							"type": "string"
+							"$ref": "#/components/schemas/Code"
 						}
 					}
 				]
